--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -193,6 +193,12 @@ body {
       }
     }
   }
+  .earthie-details {
+    .back-button-earthie-details {
+      font-size: 22px;
+      cursor: pointer;
+    }
+  }
 }
 
 .bold {
