--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20342,7 +20342,7 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 body {
   margin: 0;
   padding: 0;
-  background-color: #4d946e; }
+  background-color: #f0f2f5; }
 
 * {
   font-family: MoonRegular; }
