--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20537,6 +20537,12 @@ body {
       justify-content: center;
       align-items: center; }
 
+.account-page {
+  display: flex;
+  flex-direction: row; }
+  .account-page div {
+    width: 50%; }
+
 @media only screen and (max-width: 730px) {
   .ant-layout-header {
     display: flex;
