--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -257,9 +257,15 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - 111px);
+  height: calc(100vh - 90px);
   text-align: center;
   background-color: $first;
+  .title {
+    color: $bg;
+  }
+  .subtitle {
+    color: $bg;
+  }
   h2 {
     color: $bg;
   }
