--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -193,6 +193,19 @@ body {
       }
     }
   }
+
+  .offline-device-details {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    h1 {
+      font-family: MoonBold;
+    }
+  }
   .earthie-details {
     display: flex;
     flex-direction: column;
