--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -192,7 +192,10 @@ body {
           width: 350px;
           height: 400px;
           object-fit: cover;
-          @media only screen and (max-width: 380px) {
+          @media only screen and (max-width: 440px) {
+            width: 17rem;
+          }
+          @media only screen and (max-width: 330px) {
             width: 14rem;
           }
         }
