--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20501,6 +20501,14 @@ body {
   flex-direction: column;
   align-items: center;
   min-height: 100vh; }
+  .chips-container .earthie-details .earthie-details-data {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap; }
+    @media screen and (max-width: 900px) {
+      .chips-container .earthie-details .earthie-details-data {
+        flex-direction: column; } }
   .chips-container .earthie-details .earthie-details-buttons {
     padding: 10px;
     display: flex;
@@ -20527,17 +20535,29 @@ body {
   .chips-container .earthie-details .earthie-details-photo-timeline {
     padding: 10px;
     display: flex;
-    justify-content: space-evenly;
-    width: 100%;
+    justify-content: space-around;
+    width: 45%;
+    flex-direction: column;
     align-items: center;
     flex-wrap: wrap; }
+    @media screen and (max-width: 900px) {
+      .chips-container .earthie-details .earthie-details-photo-timeline {
+        width: auto; } }
   .chips-container .earthie-details .earthie-details-metrics-history {
     padding: 10px;
     display: flex;
-    justify-content: space-evenly;
-    width: 100%;
+    justify-content: space-around;
+    flex-direction: column;
+    width: 45%;
     align-items: center;
     flex-wrap: wrap; }
+    @media screen and (max-width: 900px) {
+      .chips-container .earthie-details .earthie-details-metrics-history {
+        width: auto; } }
+
+@media screen and (max-width: 900px) {
+  .edit-earthie .form-container {
+    height: auto; } }
 
 .bold {
   font-weight: bolder; }
