--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -247,6 +247,16 @@ body {
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
+
+    .earthie-details-data {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      @media screen and (max-width: 900px) {
+        flex-direction: column;
+      }
+    }
     .earthie-details-buttons {
       padding: 10px;
       display: flex;
@@ -278,18 +288,35 @@ body {
     .earthie-details-photo-timeline {
       padding: 10px;
       display: flex;
-      justify-content: space-evenly;
-      width: 100%;
+      justify-content: space-around;
+      width: 45%;
+      flex-direction: column;
       align-items: center;
       flex-wrap: wrap;
+      @media screen and (max-width: 900px) {
+        width: auto;
+      }
     }
     .earthie-details-metrics-history {
       padding: 10px;
       display: flex;
-      justify-content: space-evenly;
-      width: 100%;
+      justify-content: space-around;
+      flex-direction: column;
+      width: 45%;
+
       align-items: center;
       flex-wrap: wrap;
+      @media screen and (max-width: 900px) {
+        width: auto;
+      }
+    }
+  }
+}
+
+.edit-earthie {
+  .form-container {
+    @media screen and (max-width: 900px) {
+      height: auto;
     }
   }
 }
