--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -64,6 +64,14 @@ body {
   width: 75%;
   position: fixed;
 }
+.side-nav-title {
+  display: flex;
+  align-items: center;
+  h4 {
+    margin: 0;
+    padding: 0 5px;
+  }
+}
 .nav-bar-container {
   display: flex;
   flex-direction: row;
@@ -195,7 +203,7 @@ body {
           @media only screen and (max-width: 440px) {
             width: 17rem;
           }
-          @media only screen and (max-width: 330px) {
+          @media only screen and (max-width: 360px) {
             width: 14rem;
           }
         }
@@ -443,7 +451,7 @@ body {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: baseline;
-  @media only screen and (max-width: 380px) {
+  @media only screen and (max-width: 770px) {
     align-items: center;
     justify-content: center;
     flex-direction: column-reverse;
@@ -458,7 +466,7 @@ body {
   margin: 30px;
   .form-container {
     background-color: transparent;
-    @media only screen and (max-width: 380px) {
+    @media only screen and (max-width: 770px) {
       height: 100vh;
     }
     .form-buttons {
@@ -482,7 +490,7 @@ body {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        @media only screen and (max-width: 380px) {
+        @media only screen and (max-width: 770px) {
           width: 14rem;
           font-size: 1.2rem;
         }
@@ -496,7 +504,7 @@ body {
     .form-component {
       width: 70%;
       a {
-        @media only screen and (min-width: 380px) {
+        @media only screen and (min-width: 770px) {
           display: none;
         }
       }
@@ -513,7 +521,7 @@ body {
           background-color: $second;
           color: $bg;
           border: none;
-          @media only screen and (max-width: 380px) {
+          @media only screen and (max-width: 770px) {
             width: 14rem;
             font-size: 1.2rem;
           }
@@ -522,7 +530,7 @@ body {
             background-color: $alternative;
           }
         }
-        @media only screen and (max-width: 380px) {
+        @media only screen and (max-width: 770px) {
           min-width: 0px;
           width: 14rem;
         }
@@ -543,7 +551,9 @@ body {
     }
   }
 }
-
+.ant-table td {
+  white-space: nowrap;
+}
 .ant-layout-header {
   @media only screen and (max-width: 730px) {
     display: flex;
@@ -579,8 +589,11 @@ body {
       font-size: 3rem;
       font-weight: bolder;
       color: $bg;
-      @media only screen and (max-width: 370px) {
+      @media only screen and (max-width: 400px) {
         font-size: 2.2rem;
+      }
+      @media only screen and (max-width: 340px) {
+        font-size: 1.8rem;
       }
     }
 
@@ -597,12 +610,20 @@ body {
           cursor: pointer;
           background-color: $alternative;
         }
+        @media only screen and (max-width: 340px) {
+          padding: 7px 20px;
+          font-size: 1.3em;
+        }
       }
     }
     .description {
       p {
         font-size: 1.3rem;
         color: $bg;
+        @media only screen and (max-width: 340px) {
+          font-size: 1.1rem;
+          padding: 0;
+        }
       }
     }
     @media only screen and (max-width: 730px) {
