--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -194,6 +194,10 @@ body {
     justify-content: center;
     align-items: center;
     padding: 10px;
+    @media only screen and (max-width: 730px) {
+      flex-direction: column;
+    }
+
     h2 {
       padding-right: 15px;
     }
@@ -207,9 +211,9 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    @media only screen and (max-width: 1300px) {
-      margin-top: 50px;
-    }
+    // @media only screen and (max-width: 1300px) {
+    //   margin-top: 50px;
+    // }
 
     scroll-snap-type: mandatory;
     .earthie-item {
