--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -352,7 +352,7 @@ body {
 .edit-earthie {
   .form-container {
     @media screen and (max-width: 900px) {
-      height: auto;
+      min-height: 100vh;
     }
   }
 }
