--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -268,7 +268,7 @@ body {
 
   .offline-device-details {
     width: 100%;
-    height: 100vh;
+    min-height: calc(100vh - 60px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -447,26 +447,11 @@ body {
         min-width: 95vw;
       }
     }
-    .buttons-delete-earthie-settings {
-      color: $bg;
-      .btns {
-        margin: 3px;
-      }
-    }
 
     .buttons-settings-chip {
       display: flex;
       justify-content: center;
       align-items: center;
-      .delete-btn {
-        margin: 0;
-        color: lightgrey;
-        padding: 5px;
-        &:hover {
-          color: white;
-          cursor: pointer;
-        }
-      }
     }
     .form-field-col6 {
       display: flex;
@@ -757,6 +742,32 @@ body {
       -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
       box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
     }
+  }
+}
+
+.delete-btn {
+  margin: 0;
+  color: #ee5411;
+  padding: 5px;
+  &:hover {
+    color: #c04917;
+    cursor: pointer;
+  }
+}
+
+.buttons-delete-earthie-settings {
+  color: $bg;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .btns {
+    margin: 3px;
+    width: 100px;
+  }
+  .no-btn:hover {
+    color: $bg;
+    cursor: pointer;
   }
 }
 
