--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20451,30 +20451,45 @@ body {
 .capitalize {
   text-transform: capitalize; }
 
+.randomJoke {
+  text-align: center;
+  font-size: 1rem;
+  width: 300px; }
+
 .dashboard-main {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center; }
+  align-items: stretch; }
   .dashboard-main .salute {
     font-family: MoonBold;
+    font-size: 2rem;
     text-align: center;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px; }
+    padding: 50px;
+    background: #a6c5b4; }
     @media only screen and (max-width: 730px) {
       .dashboard-main .salute {
-        flex-direction: column; } }
+        font-size: 1.2rem; } }
     .dashboard-main .salute h2 {
-      padding-right: 15px; }
+      font-size: 1.5rem; }
+      @media only screen and (max-width: 730px) {
+        .dashboard-main .salute h2 {
+          font-size: 1rem; } }
+    .dashboard-main .salute h2,
+    .dashboard-main .salute h1 {
+      margin: 0;
+      width: 350px; }
 
 .chips-container .earthies-list {
+  overflow: auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  min-height: calc(100vh - 60px);
+  align-items: flex-start;
+  max-height: 100vh;
   scroll-snap-type: mandatory; }
   .chips-container .earthies-list .earthie-item {
     margin: 2rem;
@@ -20499,7 +20514,7 @@ body {
         margin: 2rem 0.4rem; } }
 
 .chips-container .no-device-message {
-  min-height: calc(100vh - 60px);
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -20516,7 +20531,7 @@ body {
 
 .chips-container .offline-device-details {
   width: 100%;
-  min-height: calc(100vh - 60px);
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -20599,7 +20614,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: calc(100vh - 60px);
+  min-height: 100vh;
   text-align: center;
   background-color: #4d946e; }
   .form-container .title {
