--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20468,8 +20468,16 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 50px;
-    background: #a6c5b4; }
+    padding: 0 30px;
+    background: #a6c5b4;
+    height: 100vh;
+    color: #001529; }
+    .dashboard-main .salute .salute-greeting {
+      margin: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; }
     @media only screen and (max-width: 730px) {
       .dashboard-main .salute {
         font-size: 1.2rem; } }
@@ -20480,8 +20488,9 @@ body {
           font-size: 1rem; } }
     .dashboard-main .salute h2,
     .dashboard-main .salute h1 {
+      color: #001529;
       margin: 0;
-      width: 350px; }
+      width: 370px; }
 
 .chips-container .earthies-list {
   overflow: auto;
@@ -20771,9 +20780,7 @@ body {
   white-space: nowrap; }
 
 .footer {
-  background: #a6c5b4;
   width: 100%;
-  height: 60px;
   display: flex;
   justify-content: flex-end;
   align-items: center; }
@@ -20786,7 +20793,8 @@ body {
     .footer .perm-logo img {
       height: 40px; }
     .footer .perm-logo p {
-      padding: 3px;
+      padding-right: 10px;
+      font-size: 1.2rem;
       margin: 0; }
 
 .earthie-history-table {
