--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -200,9 +200,17 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 50px;
+    padding: 0 30px;
     background: $icon;
-
+    height: 100vh;
+    color: #001529;
+    .salute-greeting {
+      margin: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
     // margin: 40px;
     @media only screen and (max-width: 730px) {
       font-size: 1.2rem;
@@ -215,8 +223,9 @@ body {
     }
     h2,
     h1 {
+      color: #001529;
       margin: 0;
-      width: 350px;
+      width: 370px;
     }
   }
 }
@@ -586,9 +595,7 @@ body {
 }
 
 .footer {
-  background: $icon;
   width: 100%;
-  height: 60px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -602,7 +609,8 @@ body {
       height: 40px;
     }
     p {
-      padding: 3px;
+      padding-right: 10px;
+      font-size: 1.2rem;
       margin: 0;
     }
   }
