--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20455,6 +20455,9 @@ body {
   text-align: center;
   font-size: 1rem;
   width: 300px; }
+  @media only screen and (max-width: 350px) {
+    .randomJoke {
+      width: 230px; } }
 
 .dashboard-main {
   display: flex;
@@ -20471,6 +20474,8 @@ body {
     background: #a6c5b4;
     height: 100vh;
     color: #001529; }
+    .dashboard-main .salute i {
+      display: none; }
     .dashboard-main .salute .salute-greeting {
       margin: auto;
       display: flex;
@@ -20482,9 +20487,6 @@ body {
         font-size: 1.2rem; } }
     .dashboard-main .salute h2 {
       font-size: 1.5rem; }
-      @media only screen and (max-width: 730px) {
-        .dashboard-main .salute h2 {
-          font-size: 1rem; } }
     .dashboard-main .salute h2,
     .dashboard-main .salute h1 {
       color: #001529;
@@ -20492,7 +20494,7 @@ body {
       width: 370px; }
 
 .chips-container .earthies-list {
-  overflow: auto;
+  overflow: scroll;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -20531,7 +20533,8 @@ body {
     width: 600px; }
   @media screen and (max-width: 900px) {
     .chips-container .no-device-message h3 {
-      width: 400px; } }
+      width: 350px;
+      font-size: 0.9rem; } }
   @media screen and (max-width: 500px) {
     .chips-container .no-device-message h3 {
       width: 250px; } }
@@ -20949,3 +20952,19 @@ i {
   background-color: #f0f2f5;
   padding: 3px 7px;
   border-radius: 5px; }
+
+@media only screen and (max-width: 880px) {
+  .dashboard-main {
+    flex-direction: column; }
+    .dashboard-main .salute {
+      flex-direction: column-reverse;
+      max-width: calc(100vw - 80px); }
+      .dashboard-main .salute i {
+        display: block; }
+        .dashboard-main .salute i:hover {
+          cursor: pointer;
+          color: #f0f2f5; }
+      .dashboard-main .salute .salute-greeting {
+        margin: auto 0; }
+      .dashboard-main .salute .footer .perm-logo p {
+        font-size: 1rem; } }
