--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -240,7 +240,7 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
-    max-height: 100vh;
+    min-height: 100vh;
     .earthie-item {
       margin: 2rem;
       display: flex;
