--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20499,7 +20499,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
-  max-height: 100vh; }
+  min-height: 100vh; }
   .chips-container .earthies-list .earthie-item {
     margin: 2rem;
     display: flex;
