--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20499,7 +20499,11 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
-  min-height: 100vh; }
+  max-height: 100vh; }
+  @media only screen and (max-width: 880px) {
+    .chips-container .earthies-list {
+      min-height: 100vh;
+      max-height: none; } }
   .chips-container .earthies-list .earthie-item {
     margin: 2rem;
     display: flex;
