Small changes to icon

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -808,6 +808,11 @@ body {
 }
 
 // ! ANT DESIGN OVER STYLING
+
+.ant-menu-item .anticon,
+.ant-menu-submenu-title .anticon {
+  margin: 0 14px;
+}
 i {
   color: $icon;
 }
