--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20952,6 +20952,10 @@ body {
     color: #f0f2f5;
     cursor: pointer; }
 
+.ant-menu-item .anticon,
+.ant-menu-submenu-title .anticon {
+  margin: 0 14px; }
+
 i {
   color: #a6c5b4; }
 
