--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20827,7 +20827,7 @@ body {
   display: flex;
   flex-direction: row;
   height: calc(100vh - 90px);
-  background-image: url("/images/homepage-bg.jpg");
+  background-image: url("/images/tom_final4.png");
   background-size: cover;
   background-repeat: no-repeat; }
   .home-page .box {
